--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<li>vagrant</li>
 		<li>docker</li>
 		<li>ansible</li>
-		<li>integração contínua</li>
+		<li>Integração contínua: maturidade e produtividade no desenvolvimento de software</li>
 	</ul>
 </body>
 </html>
