--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Estudando Git</title>
+	<title>Criando listas de cursos</title>
 </head>
 <body>
 	<ul>
