--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<li>docker: escrvendo documentos</li>
 		<li>ansible</li>
 		<li>Integração contínua: maturidade e produtividade no desenvolvimento de software</li>
+		<li>javascript</li>
 	</ul>
 </body>
 </html>
