adicionando um novo item de lista

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<ul>
 		<li>vagrant</li>
-		<li>docker</li>
+		<li>docker: escrvendo documentos</li>
 		<li>ansible</li>
 		<li>Integração contínua: maturidade e produtividade no desenvolvimento de software</li>
 	</ul>
