--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<li>ansible</li>
 		<li>Integração contínua: maturidade e produtividade no desenvolvimento de software</li>
 		<li>javascript</li>
+		<li>java</li>
 	</ul>
 </body>
 </html>
