--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 </head>
 <body>
 	<ul>
-		<li>vagrant</li>
-		<li>docker: escrvendo documentos</li>
-		<li>ansible</li>
-		<li>Integração contínua: maturidade e produtividade no desenvolvimento de software</li>
 		<li>javascript</li>
 		<li>java</li>
+		<li>html</li>
+		<li>css</li>
+		<li>bootstrap</li>
 	</ul>
 </body>
 </html>
